<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/mainactiv_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/mainactvitiy_label"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/mainactiv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="serif"
        android:text="@string/mainactvitiy_summary" />

    <TextView
        android:id="@+id/localsongmenu"
        style="@style/textViewStyle"
        android:background="@color/menu_localsongs"
        android:text="@string/menu_localsongs_txtview" />

    <TextView
        android:id="@+id/favoritesongsmenu"
        style="@style/textViewStyle"
        android:background="@color/menu_favoritesongs"
        android:text="@string/menu_playlistsongs_txtview" />

    <TextView
        android:id="@+id/now_playing"
        style="@style/textViewStyle"
        android:background="@color/menu_nowplaying"
        android:text="@string/nowplaying_menuitem" />

    <TextView
        android:id="@+id/settingsmenu"
        style="@style/textViewStyle"
        android:background="@color/menu_settings"
        android:text="@string/menu_settings_activity" />
</LinearLayout>


