<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nowplayingactiv_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/nowplaying_desc"
        android:textAppearance="?android:textAppearanceLarge" />

    <TextView
        android:id="@+id/nowplayingexplanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nowplayingactiv_label"
        android:layout_margin="16dp"
        android:fontFamily="serif"
        android:text="@string/now_activity_explanation"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/nowplayingsong"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@id/nowplayingexplanation"
        android:layout_margin="16dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/current_song" />

    <Button
        android:id="@+id/mainmenubutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:text="@string/backto_mainmenu" />
</RelativeLayout>
