<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context="com.example.android.mymusic.PaymentsActivity">

    <TextView
        android:id="@+id/payment_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/paymentactive_desc"
        android:textAppearance="?android:textAppearanceLarge" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/payment_label"
        android:fontFamily="serif"
        android:text="@string/payment_instructions_api"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/back_to_nowplayingactivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:text="@string/backto_nowplaying" />
</RelativeLayout>
