<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.mymusic.PlayListSongsActivity">

    <TextView
        android:id="@+id/playlistactiv_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/playlistactive_label"
        android:textAppearance="?android:textAppearanceLarge" />

    <TextView
        android:id="@+id/playlist_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/playlistactiv_label"
        android:layout_margin="8dp"
        android:layout_marginBottom="5dp"
        android:text="@string/playlist_desc" />

    <TextView
        android:id="@+id/favorite_song1"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@id/playlist_description"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/playlistsongs1" />

    <!--<Button-->
    <!--android:id="@+id/nowplayingact"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--android:layout_marginBottom="32dp"-->
    <!--android:text="@string/backto_nowplaying" />-->
</RelativeLayout>
